# BillML

./: .env.example  .gitignore  .gitmodules  Dockerfile  Makefile  README.adoc  README.md  build_docker_image.sh  create_dataset.py  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
common/constants/: billml.py
core/: bill_summaries.py  bill_texts.py
samples/: 10_bill_summary_us_11-10-2023_16-29-34.jsonl  10_bill_text_us_11-10-2023_13-02-35.jsonl  wiki_9_bills_example_dataset.jsonl
schemas/: bill_summaries.py  bill_texts.py
utils/: bill_files.py  bill_summaries.py  bill_texts.py  create_sample_dataset.py  datasets.py  download_bills_data.sh  logging.py  show_bill_summary_us_dataset_info.ipynb  show_bill_text_us_dataset_info.ipynb  upload_bills_data.sh  upload_dataset_to_hf.py  upload_datasets_data.sh
utils/logs/: log.py  setup.py
