[tool.poetry]
name = "billml"
version = "0.1.0"
description = ""
authors = [
    "Andrii Kovalov <jfkwww1@gmail.com>",
    "Alex Boiko <django.develop@gmail.com>",
    "Ari Hershowitz <arihershowitz@dreamproit.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
flake8 = "^5.0.4"
isort = "^5.10.1"
lxml = "^4.9.1"
jsonlines = "^3.1.0"
python-dotenv = "^0.21.0"
aiofiles = "^22.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
