[tool.poetry]
name = "billml"
version = "0.1.0"
description = ""
authors = [
    "Andrii Kovalov <jfkwww1@gmail.com>",
    "Alex Boiko <django.develop@gmail.com>",
    "Ari Hershowitz <arihershowitz@dreamproit.com>",
]
readme = "README.adoc"

[tool.poetry.dependencies]
python = "^3.11.5"
beautifulsoup4 = "^4.11.1"
flake8 = "^5.0.4"
isort = "^5.10.1"
lxml = "^4.9.1"
jsonlines = "^3.1.0"
python-dotenv = "^0.21.0"
aiofiles = "^22.1.0"
united-states-congress = {path="./congress", develop = true}
python-json-logger = "2.0.4"
black = "22.10.0"
Flake8-pyproject = "1.2.3"
click = "8.1.7"
pydantic = "2.3.0"
anyio = "4.0.0"
asyncclick = "8.1.3.4"
pandas = "2.1.0"
ipykernel = "6.25.2"
huggingface-hub = "0.18.0"

[tool.flake8]
max-line-length = 120
exclude = [".git"]
extend-ignore = ["E203", "W503"]

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = 'black'
multi_line_output=3
indent='    '
line_length=120
from_first = "True"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY"]
include_trailing_comma = "True"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
